tests/baselines/reference/asyncFunctionDeclaration8_es6.errors.txt
asyncFunctionDeclaration8_es6.ts(1,12): error TS2304: Cannot find name 'await'.
asyncFunctionDeclaration8_es6.ts(1,20): error TS2304: Cannot find name 'foo'.


==== asyncFunctionDeclaration8_es6.ts (2 errors) ====
    var v = { [await]: foo }
               ~~~~~
!!! error TS2304: Cannot find name 'await'.
                       ~~~
!!! error TS2304: Cannot find name 'foo'.